# rust-win7-ci

./: deploy.py  dist.py  flake.nix  pyproject.toml  utils.py
