[tool.poetry]
name = "rust-ci"
version = "0.1.0"
description = ""
authors = ["roblabla <unfiltered@roblab.la>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"
requests = "^2.31.0"
tomlkit = "^0.12.3"
boto3 = "^1.34.11"
alive-progress = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
